--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
   "bugs": {
     "url": "https://github.com/hans-man/my-project-manager/issues"
   },
-  "homepage": "https://github.com/hans-man/my-project-manager#readme"
+  "homepage": "https://github.com/hans-man/my-project-manager#readme",
+  "dependencies": {
+    "commander": "^14.0.3",
+    "gray-matter": "^4.0.3"
+  }
 }
