--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,10 @@ dist/
 backend/node_modules/
 backend/.env
 
+# Frontend specific
+frontend/node_modules/
+frontend/.env
+
 # OS-specific
 .DS_Store
 Thumbs.db
